test/fail/comma-dangle-multiline.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: This file should produce an error for the comma-dangle rule.

const commaDangleMultilineNo = {
  a: 'a'
}
